# FORGE-BY-CHAT

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/intent/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: use-pipeline.ts  use-websocket.ts
frontend/src/store/: auth.ts  pipeline.ts
frontend/src/types/: index.ts
infra/docker/: Dockerfile.api  Dockerfile.worker
infra/kubernetes/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  worker-deployment.yaml
infra/terraform/environments/dev/: main.tf
infra/terraform/environments/prod/: main.tf
scripts/: migrate.sh  setup.sh
system/: __init__.py
system/agents/: __init__.py  base.py  prompts.py  registry.py  router.py  runner.py
system/agents/architect/: agent.py
system/agents/backend/: agent.py
system/agents/docs/: agent.py
system/agents/frontend/: agent.py
system/agents/infra/: agent.py
system/agents/qa/: agent.py
system/agents/refactor/: agent.py
system/agents/security/: agent.py
system/api/: main.py
system/api/auth/: jwt.py  router.py
system/api/gateway/: rate_limiter.py
system/api/orchestration_api/: router.py
system/api/websocket/: handler.py
system/config/: __init__.py  settings.py
system/core/: __init__.py
system/core/deployment/: __init__.py  cicd.py  engine.py  health_checker.py  provisioner.py  rollback.py  router.py  schemas.py  secrets_manager.py
system/core/evolution/: __init__.py  diff_analyzer.py  engine.py  inspector.py  patch_planner.py  regression_guard.py  router.py  schemas.py
system/core/intent/: __init__.py  clarification.py  engine.py  parser.py  persistence.py  router.py  schemas.py  validator.py
system/core/memory/: __init__.py  engine.py  episodic_memory.py  retrieval.py  router.py  schemas.py  semantic_memory.py  summarizer.py
system/core/monitoring/: __init__.py  collector.py  engine.py  router.py  schemas.py
system/core/orchestration/: __init__.py  event_bus.py  event_schemas.py  graph_router.py  orchestration_router.py  retry_manager.py  state_manager.py  task_graph.py  task_schemas.py  workflow_engine.py
system/core/planning/: __init__.py  architect.py  engine.py  router.py  scalability_validator.py  schemas.py  stack_recommender.py  topology_engine.py
system/core/specification/: __init__.py  api_contract_generator.py  dependency_analyzer.py  engine.py  prd_generator.py  router.py  schema_generator.py  schemas.py  ui_mapper.py
system/core/verification/: __init__.py  architecture_validator.py  engine.py  router.py  runtime_validator.py  schemas.py  self_healing.py  static_validator.py
system/execution/: __init__.py
system/execution/containers/: __init__.py  runtime.py
system/execution/environments/: __init__.py  env_manager.py
system/execution/isolation/: __init__.py  isolator.py
system/execution/sandboxes/: __init__.py  sandbox.py
system/observability/: __init__.py
system/observability/alerts/: __init__.py  alerter.py
system/observability/logging/: __init__.py  logger.py
system/observability/metrics/: __init__.py  collector.py
system/observability/tracing/: __init__.py  tracer.py
system/repo_intelligence/: __init__.py  indexer.py  router.py  schemas.py
system/repo_intelligence/ast/: __init__.py  parser.py
system/repo_intelligence/dependency_mapping/: __init__.py  mapper.py
system/repo_intelligence/embeddings/: __init__.py  embedder.py
system/repo_intelligence/graph/: __init__.py  builder.py
system/repo_intelligence/semantic_search/: __init__.py  retriever.py
system/runtime/: __init__.py
system/runtime/events/: event_dispatcher.py
system/runtime/queues/: task_queue.py
system/runtime/scheduler/: cron_scheduler.py
system/runtime/state/: store.py
system/runtime/workers/: celery_app.py
system/shared/: __init__.py  constants.py  database.py  exceptions.py  llm_client.py  models.py  neo4j_client.py  redis_client.py  schemas.py
system/tools/: __init__.py  router.py  schemas.py
system/tools/database/: __init__.py  migrator.py
system/tools/deployment/: __init__.py  deployer.py
system/tools/docker/: __init__.py  manager.py
system/tools/github/: __init__.py  client.py
system/tools/kubernetes/: __init__.py  manager.py
system/tools/terminal/: __init__.py  executor.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_intent_parser.py  test_task_graph.py
(+3 files in other folders)
