[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "Autonomous Software Production System"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FORGE Team" }]
keywords = ["ai", "agents", "software-production", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi[all]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "langgraph>=0.2",
    "anthropic>=0.39",
    "openai>=1.54",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pgvector>=0.3",
    "neo4j>=5.26",
    "tree-sitter>=0.23",
    "tiktoken>=0.8",
    "tenacity>=9.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-api>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "prometheus-client>=0.21",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.12",
    "temporalio>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "faker>=33.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-passlib",
    "types-python-jose",
    "types-redis",
    "bandit>=1.7",
    "safety>=3.2",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "faker>=33.0",
]

[project.scripts]
forge-api = "system.api.main:start"
forge-worker = "system.runtime.workers.celery_app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["system*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N999",  # invalid module name
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["system"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]
"alembic/**/*.py" = ["F401"]
"system/repo_intelligence/ast/parser.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
exclude = [
    "alembic/",
    "tests/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "langgraph.*",
    "temporalio.*",
    "pgvector.*",
    "tree_sitter.*",
    "tiktoken.*",
    "neo4j.*",
    "passlib.*",
    "jose.*",
    "structlog.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (requires running services)",
    "slow: slow tests",
    "api: API endpoint tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["system"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "alembic/*",
    "scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]
